// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`logo Basic usage 1`] = `
<bolt-logo>
  <bolt-image no-lazy
              placeholder-color="hsl(233, 33%, 97%)"
              placeholder-image="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
              src="/fixtures/logo-paypal.svg"
              srcset="/fixtures/logo-paypal.svg"
  >
    <img class="c-bolt-image__image"
         alt
         srcset="/fixtures/logo-paypal.svg"
         sizes="auto"
         src="/fixtures/logo-paypal.svg"
    >
  </bolt-image>
</bolt-logo>
`;

exports[`logo Default <bolt-logo> renders 1`] = `
<bolt-logo
  style=""
>
  <bolt-image
    alt="Paypal Logo"
    ratio="124/33"
    src="/fixtures/logo-paypal.svg"
    style=""
  />
</bolt-logo>
`;

exports[`logo Inverted <bolt-logo> renders as inverted 1`] = `
<bolt-logo
  class="c-bolt-logo--invert"
  style=""
>
  <bolt-image
    alt="Paypal Logo"
    ratio="124/33"
    src="/fixtures/logo-paypal.svg"
    style=""
  />
</bolt-logo>
`;

exports[`logo Logo with invert set to "true" renders properly 1`] = `
<bolt-logo class="c-bolt-logo--invert">
  <bolt-image no-lazy
              placeholder-color="hsl(233, 33%, 97%)"
              placeholder-image="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
              src="/fixtures/logo-paypal.svg"
              srcset="/fixtures/logo-paypal.svg"
  >
    <img class="c-bolt-image__image"
         alt
         srcset="/fixtures/logo-paypal.svg"
         sizes="auto"
         src="/fixtures/logo-paypal.svg"
    >
  </bolt-image>
</bolt-logo>
`;
